[workspace]
resolver = "2"

members = [
    "macros",
    "types",
    "gribberish",
    "node",
    "python"
]

# eccodes is excluded by default since it requires the eccodes C library
# To include it, build with: cargo build --features gribberish/eccodes
exclude = [
    "eccodes"
]

[profile.release]
debug = true
lto = true