[package]
name = "gribberish-eccodes"
version = "0.23.0"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]
description = "Safe Rust bindings for ECMWF eccodes library"
edition = "2021"
license = "MIT"
repository = "https://github.com/mpiannucci/gribberish"

[dependencies]
eccodes-sys = "0.5"
thiserror = "1.0.60"

[build-dependencies]
pkg-config = "0.3"
