[package]
name = "gribberish"
version = "0.20.0"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]
edition = "2021"

[dependencies]
gribberish-types = { path = "../types" }
gribberish-macros = { path = "../macros" }
chrono = "0.4"
openjpeg-sys = { version = "1.0.3", optional = true }
png = { version = "0.17.2", optional = true }
num = { version = "0.2", default-features = false }
itertools = "0.10.5"
mappers = "0.7.1"
bitvec = "1.0.1"
thiserror = "1.0.60"

[features]
default = ["png", "jpeg"]
png = ["dep:png"]
jpeg = ["dep:openjpeg-sys"]

[dev-dependencies]
clap = { version = "4.3.19", features = ["derive"] }
