[package]
name = "gribberish"
version = "0.24.0"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]
description = "Parse grib 2 files with Rust"
edition = "2021"
license = "MIT"
repository = "https://github.com/mpiannucci/gribberish"
keywords = ["grib", "weather", "meteorology", "climate", "oceanography"]
categories = ["science", "encoding", "compression"]
exclude = ["tests"]

[dependencies]
gribberish-types = { path = "../types", version = "0.24.0" }
gribberish-macros = { path = "../macros", version = "0.24.0" }
chrono = "0.4"
openjpeg-sys = { version = "1.0.3", optional = true }
png = { version = "0.17.2", optional = true }
num = { version = "0.2", default-features = false }
itertools = "0.10.5"
mappers = "0.7.1"
bitvec = "1.0.1"
thiserror = "1.0.60"
bitflags = "2.6.0"
libaec-sys = { version = "0.1.1", optional = true }

[features]
default = ["png", "jpeg"]
png = ["dep:png"]
jpeg = ["dep:openjpeg-sys"]
libaec = ["dep:libaec-sys"]

[dev-dependencies]
clap = { version = "4.3.19", features = ["derive"] }
