
[package]
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]
edition = "2024"
name = "gribberish_js"
version = "0.28.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["chrono_date"] }
napi-derive = "3.0.0"
gribberish = { path = "../gribberish", version = "0.28.0" }
chrono = "0.4"

[build-dependencies]
napi-build = "2"
