
[package]
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]
edition = "2024"
name = "gribberish_js"
version = "0.28.2"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["chrono_date"] }
napi-derive = "3.0.0"
gribberish = { path = "../gribberish", version = "0.28.2", default-features = false, features = ["png"] }
chrono = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gribberish = { path = "../gribberish", version = "0.28.2", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
napi-build = "2"
