[package]
name = "gribberish-macros"
version = "0.20.2"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]
description = "Procedural macros for the gribberish crate"
edition = "2021"
license = "MIT"
repository = "https://github.com/mpiannucci/gribberish"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gribberish-types = { path = "./../types", version = "0.20.2" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
