[package]
edition = "2021"
name = "gribberishjs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.5.0", default-features = false, features = ["napi4"] }
napi-derive = "2.5.0"
gribberish = { path = "../" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
