[package]
edition = "2021"
name = "gribberishjs"
version = "0.20.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.5.0", default-features = false, features = ["chrono_date"] }
napi-derive = "2.5.0"
gribberish = { path = "../gribberish" }
chrono = "0.4"

[build-dependencies]
napi-build = "2.0.1"
