[package]
name = "gribberish-node"
version = "0.9.0"
description = "Read GRIB2 files with node"
authors = ["Matthew Iannucci"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gribberish = { path = "../" }

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
