[package]
name = "grib-macros"
version = "0.1.0"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grib-types = { path = "./../types" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
